--- a/estilos.css
+++ b/estilos.css
@@ -23,9 +23,9 @@ body{
     border-radius: 85px;
 }
 
-.btn{
+button{
     background-color: rgb(204, 105, 243);
-    border-radius: 30px;
+    border-radius: 10px;
     border: none;
     height: fit-content;
     width: 12rem;
@@ -36,4 +36,7 @@ body{
     margin-left: 0.5rem;
     margin-right: 0.5rem;
 
+}
+h4{
+    margin-top: 1rem;
 }
