--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body{ 
     font-family:'Sofia Sans', sans-serif;
-    
+    background-color: rgb(211, 205, 205);
 
 }
 
@@ -50,16 +50,10 @@ h4{
     border-radius: 50px;
     height: 8px;
 }
-#datos{
-    margin-top: 5rem;
-    font-size: small;
-    font-weight: 100;
-    border: 1px solid rgb(204, 105, 243);
-    border-radius: 15px;
-    width: 40rem;
+footer{
+    margin-top: 4rem;
+    padding-left: 1rem;
 }
-#ul{
-    font-size: small;
-    font-weight: bolder;
+ul{
     list-style: none;
 }
