--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,18 @@
 body{ 
     font-family:'Sofia Sans', sans-serif;
-    background-color: rgb(211, 205, 205);
+    background-color: antiquewhite;
 }
 
 #header{
-    background-color: rgb(245, 176, 199);
-    color: white;
+    color: rgb(68, 67, 67);
     height: 15rem;
+    background-image: url('fondoheader.jpeg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position-x:center;
+    
+    
 }
 #draw{
     margin-right: 5rem;
@@ -31,7 +37,7 @@ body{
 
 button{
     background-color: rgb(204, 105, 243);
-    border-radius: 10px;
+    border-radius: 5px;
     border: none;
     height: fit-content;
     width: 12rem;
@@ -41,8 +47,8 @@ button{
     margin-top: 1rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-
 }
+
 h4{
     margin-top: 1rem;
 }
@@ -50,10 +56,11 @@ h4{
 #head{
     font-size: 1.5rem;
 }
+
 .progress{
     background-color:rgb(209, 204, 204);
     border: 1px solid white;
-    border-radius: 30px;
+    border-radius: 5px;
     height: 0.8rem;
 }
 .progress-bar{
@@ -70,8 +77,12 @@ ul{
     color: rgb(65, 63, 63);
 }
 #mybutton{
-    border: 4px solid rgb(204, 105, 243);
     background-color: rgb(245, 176, 199) ;
-    color:white ;
-    font-size: 1.5rem;
+    color:rgb(204, 105, 243) ;
+    font-size: 1rem;
+    border-radius: 5px;
+    height: fit-content;
+    width: 12rem;
+    padding: 1rem;
+    font-size: larger;
 }
